--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1 {
     font-family: fantasy;
     font-size: 200px;
-    color: #800000;
-    text-align: center;
+    color: blue;
+    text-align: center
 }
